Under Development page added

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="scratch_and_swift.css" >
+	<link rel="stylesheet" type="text/css" href="neverevil.css" >
 
 	<title> Scratch and Swift </title>
 </head>
