--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,12 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="scratch_and_swift.css" >
+	<link rel="stylesheet" type="text/css" href="neverevil.css" >
 
-	<title> Scratch and Swift </title>
+	<title> Contact Us </title>
+
+	<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+	<script> window.twttr = (function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0],t = window.twttr || {};if (d.getElementById(id)) return t;js = d.createElement(s);js.id = id;js.src = "https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js, fjs);t._e = [];t.ready = function(f) {t._e.push(f);};return t;}(document, "script", "twitter-wjs")); </script>
 </head>
 
 <body>
@@ -24,14 +27,10 @@
 		</ul>
 	</nav>
 	<div class="middle">
-		<a href="https://twitter.com/ScratchAndSwift" class="twitter-follow-button" data-show-count="false" data-size="large"> Follow @ScratchAndSwift </a> </br>
-		<a class="github-button" href="https://github.com/Harper95" data-style="mega" aria-label="Follow @Harper95 on GitHub">Follow @Harper95</a>	
-<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/claytonharper95" data-format="click" data-related="false" data-text="Clayton Harper"></script>		
+		<a class="twitter-follow-button" href="https://twitter.com/neverEvil_apps" data-show-count="false" data-size="large"> Follow @neverEvil_apps </a> </br>
+		<a class="github-button" href="https://github.com/Harper95" data-style="mega" aria-label="Follow @Harper95 on GitHub"> Follow @Harper95 </a>		
 	</div>
 
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-<script src="scratch_and_swift.js"></script>
 </body>
 
 <footer>
