--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="scratch_and_swift.css" >
+	<link rel="stylesheet" type="text/css" href="neverevil.css" >
 
-	<title> Scratch and Swift </title>
+	<title> Projects </title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 	</nav>
 
 	<div class="middle">
-		<h1>
+		<h1 class="center"> iBestFriend </h1>
 	</div>
 
 </body>
