--- a/home.html
+++ b/home.html
@@ -6,24 +6,24 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="neverevil.css" >
 
-	<title> Setup </title>
+	<title> Never Evil </title>
 </head>
 
 <body>
 	<header>
-		<h1> Setup </h1>
+		<h1> Never Evil Apps </h1>
 	</header>
 
 	<nav>
 		<ul id="nav_bar">
-			<li><a href="index.html"> Home </a></li>
+			<li class="current"><a href="index.html"> Home </a></li>
 			<li><a href="projects.html"> Projects </a></li>
 			<li><a href="blog.html"> Blog </a></li>
 			<li><a href="contact.html"> Contact </a></li>
-			<li class="current"><a href="setup.html"> Setup </a></li>
+			<li><a href="setup.html"> Setup </a></li>
 		</ul>
 	</nav>
-
+	
 </body>
 
 <footer>
