--- a/projects.html
+++ b/projects.html
@@ -11,17 +11,24 @@
 
 <body>
 	<header>
-		<h1> Projects </h1>
+		<h1 id="title"> Projects </h1>
 	</header>
 
-	<nav>
-		<ul id="nav_bar">
-			<li><a href="index.html"> Home </a></li>
-			<li class="current"><a href="projects.html"> Projects </a></li>
-			<li><a href="blog.html"> Blog </a></li>
-			<li><a href="contact.html"> Contact </a></li>
-			<li><a href="setup.html"> Setup </a></li>
-		</ul>
+	<nav id="nav_bar">
+		<table>
+			<tr>
+				<th><a href="index.html"><img src="home.png"></a></th>
+				<th><a href="projects.html"><img src="folder.png" id="current"></a></th>
+				<th><a href="blog.html"><img src="rss.png"></a></th>
+				<th><a href="contact.html"><img src="contact.png"></a></th>
+			</tr>
+			<tr>
+				<td> Home </td>
+				<td> Projects </td>
+				<td> Blog </td>
+				<td> Contact </td>
+			</tr>
+		</table>
 	</nav>
 
 	<div class="middle">
