--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" href="neverevil.css" >
 
 	<title> Never Evil </title>
 </head>
 
 <body>
 	<header>
-		<h1> Never Evil Apps is Currently Under Development</h1>
+		<h1 id="title"> Never Evil Apps </h1>
 	</header>
+
+	<nav id="nav_bar">
+		<table>
+			<tr>
+				<th><a href="index.html"><img src="home.png" id="current"></a></th>
+				<th><a href="projects.html"><img src="folder.png"></a></th>
+				<th><a href="blog.html"><img src="rss.png"></a></th>
+				<th><a href="contact.html"><img src="contact.png"></a></th>
+			</tr>
+			<tr>
+				<td> Home </td>
+				<td> Projects </td>
+				<td> Blog </td>
+				<td> Contact </td>
+			</tr>
+		</table>
+	</nav>
 	
 </body>
 
