Added links to buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap v5 with sass</title>
+    <title>Clayton's Portfolio Website</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
@@ -26,19 +26,19 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Testimonials</a>
+                        <a class="nav-link" href="#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="#faq">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <button type="button" class="rounded-pill btn-rounded">
@@ -89,41 +89,26 @@
     <section id="companies" class="companies">
         <div class="container">
             <div class="row text-center">
-                <h4 class="fw-bold lead mb-3">Companies who don't know who I am</h4>
+                <h4 class="fw-bold lead mb-3">Companies that I've work for</h4>
                 <div class="heading-line mb-5"></div>
             </div>
         </div>
         <!-- Start the companies content-->
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/airbnb.png" alt="airbnb">
+            <div class="row justify-content-center">
+                <div class="col-md-4 col-lg-3">
+                    <div class="companies__logo-box shadow">
+                        <img src="images/companies/sherwin-williams.png" alt="Sherwin Williams">
                     </div>
                 </div>
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/amazon.png" alt="amazon">
+                <div class="col-md-4 col-lg-3">
+                    <div class="companies__logo-box shadow">
+                        <img src="images/companies/schacht.jpg" alt="Schacht Millworks">
                     </div>
                 </div>
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/cnn.png" alt="cnn">
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/google.png" alt="google">
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/microsoft.png" alt="microsoft">
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-2">
-                    <div class="companies__logo-box shadow-sm">
-                        <img src="images/companies/walmart.png" alt="walmart">
+                <div class="col-md-4 col-lg-3">
+                    <div class="companies__logo-box shadow">
+                        <img src="images/companies/saltlake-cable.png" alt="Salt Lake Cable and Harness">
                     </div>
                 </div>
             </div>
@@ -256,10 +241,7 @@
                             <div class="testimonials__card">
                                 <p class="lh-lg">
                                     <i class="fas fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    Bark
                                     <i class="fas fa-quote-right"></i>
                                     <div class="ratings p-1">
                                         <i class="fas fa-star"></i>
@@ -272,12 +254,12 @@
                             </div>
                             <!-- Client picture -->
                             <div class="testimonials__picture">
-                                <img src="images/testimonials/client-1.jpg" alt="client-1 picture" class="img-fluid rounded-circle">
+                                <img src="images/testimonials/ransom.jpg" alt="ransom picture" class="img-fluid rounded-circle">
                             </div>
                             <!-- client name and role -->
                             <div class="testimonials__name">
-                                <h3>My Mom</h3>
-                                <p class="fw-light">CEO & founder</p>
+                                <h3>Ransom</h3>
+                                <p class="fw-light">CEO & Founder of Good Boy Intl.</p>
                             </div>
                         </div>
                         <!-- Carousel item 2 -->
@@ -286,10 +268,7 @@
                             <div class="testimonials__card">
                                 <p class="lh-lg">
                                     <i class="fas fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    You is kind. You is smart. You is important.
                                     <i class="fas fa-quote-right"></i>
                                     <div class="ratings p-1">
                                         <i class="fas fa-star"></i>
@@ -302,12 +281,12 @@
                             </div>
                             <!-- Client picture -->
                             <div class="testimonials__picture">
-                                <img src="images/testimonials/client-2.jpg" alt="client-2 picture" class="img-fluid rounded-circle">
+                                <img src="images/testimonials/aibileen-clark.jpg" alt="aibileen picture" class="img-fluid rounded-circle">
                             </div>
                             <!-- client name and role -->
                             <div class="testimonials__name">
-                                <h3>Steve</h3>
-                                <p class="fw-light">Homeless man</p>
+                                <h3>Aibileen Clark</h3>
+                                <p class="fw-light">The Help</p>
                             </div>
                         </div>
                         <!-- Carousel item 3 -->
@@ -316,10 +295,7 @@
                             <div class="testimonials__card">
                                 <p class="lh-lg">
                                     <i class="fas fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    Meow
                                     <i class="fas fa-quote-right"></i>
                                     <div class="ratings p-1">
                                         <i class="fas fa-star"></i>
@@ -332,12 +308,12 @@
                             </div>
                             <!-- Client picture -->
                             <div class="testimonials__picture">
-                                <img src="images/testimonials/client-3.jpg" alt="client-3 picture" class="img-fluid rounded-circle">
+                                <img src="images/testimonials/zeus.png" alt="zeus picture" class="img-fluid rounded-circle">
                             </div>
                             <!-- client name and role -->
                             <div class="testimonials__name">
-                                <h3>Ransom</h3>
-                                <p class="fw-light">Certified Good Boy</p>
+                                <h3>Zeus</h3>
+                                <p class="fw-light">Head of the household</p>
                             </div>
                         </div>
                         <!-- Carousel item 4 -->
@@ -346,10 +322,7 @@
                             <div class="testimonials__card">
                                 <p class="lh-lg">
                                     <i class="fas fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    You are my favorite son.
                                     <i class="fas fa-quote-right"></i>
                                     <div class="ratings p-1">
                                         <i class="fas fa-star"></i>
@@ -362,12 +335,12 @@
                             </div>
                             <!-- Client picture -->
                             <div class="testimonials__picture">
-                                <img src="images/testimonials/client-4.jpg" alt="client-4 picture" class="img-fluid rounded-circle">
+                                <img src="images/testimonials/unknown.png" alt="unkonwn picture" class="img-fluid rounded-circle">
                             </div>
                             <!-- client name and role -->
                             <div class="testimonials__name">
-                                <h3>Zeus</h3>
-                                <p class="fw-light">Cat</p>
+                                <h3>Mom</h3>
+                                <p class="fw-light">My mother</p>
                             </div>
                         </div>
                     </div>
@@ -608,21 +581,21 @@
                 <div class="col-12 col-lg-6 bg-white shadow p-3">
                     <div class="form w-100 pb-2">
                         <h4 class="display-3--title mb-5">Start your project</h4>
-                        <form action="#" class="row">
+                        <form action="contactform.php" class="contact-form row" method="post">
                             <div class="col-lg-6 col-md-6 mb-3">
-                                <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
+                                <input type="text" placeholder="First Name" id="inputFirstName" name="firstName"class="shadow form-control form-control-lg">
                             </div>
                             <div class="col-lg-6 col-md-6 mb-3">
-                                <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
+                                <input type="text" placeholder="Last Name" id="inputLastName" name="lastName" class="shadow form-control form-control-lg">
                             </div>
                             <div class="col-lg-12 mb-3">
-                                <input type="email" placeholder="Email" id="inputEmail" class="shadow form-control form-control-lg">
+                                <input type="email" placeholder="Email" id="inputEmail" name="email" class="shadow form-control form-control-lg">
                             </div>
                             <div class="col-lg-12 mb-3">
                                 <textarea name="message" placeholder="Message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
                             </div>
                             <div class="text-center d-grid mt-1">
-                                <button type="button" class="btn btn-primary rounded-pill pt-3 pb-3">
+                                <button type="submit" name="submit" class="btn btn-primary rounded-pill pt-3 pb-3">
                                     Submit
                                     <i class="fas fa-paper-plane"></i>
                                 </button>
